refactoring intertwine